DigicielFull/force-app/main/default/objects/Lead/fields/Lead_Agent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agent__c</fullName>
    <description>Used by Jamaica. Case 00425759
Updated per case 00465099</description>
    <label>Lead Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>