DigicielFull/force-app/main/default/objects/Lead/fields/Lead_GSM_ICT_Cont__c.field-meta.xml
<CustomField>
    <fullName>Lead_GSM_ICT_Cont__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead GSM/ICT Cont</label>
    <type>Text</type>
</CustomField>