DigicielFull/force-app/main/default/objects/Lead/fields/Lead_GSM_ICT_opp__c.field-meta.xml
<CustomField>
    <fullName>Lead_GSM_ICT_opp__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead GSM/ICT Opp</label>
    <type>Text</type>
</CustomField>