DigicielFull/force-app/main/default/objects/Lead/fields/Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>Lead_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Key</label>
    <type>Text</type>
</CustomField>