DigicielFull/force-app/main/default/objects/Lead/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>SOHO</fullName>
            </value>
            <value>
                <fullName>SME - East</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>