DigicielFull/force-app/main/default/objects/Lead/fields/LeadScore__c.field-meta.xml
<CustomField>
    <fullName>LeadScore__c</fullName>
    <formula>If( ISPICKVAL(  Salutation , &quot;&quot;),0,5.5)+

If(ISBLANK(FirstName),0,5.5)+

If(ISPICKVAL(Lead_Segment__c, &quot;&quot;),0,5.5)+

If(ISBLANK(Title),0,5.5)+

If( ISPICKVAL(Title_Category__c , &quot;&quot;),0,5.5)+

If(ISBLANK( Phone ),0,5.5)+

If(ISBLANK(  Email  ),0,5.5)+

If(ISPICKVAL( Industry , &quot;&quot;),0,5.5)+

If(ISPICKVAL( SubIndustry__c , &quot;&quot;),0,5.5)+

If(ISPICKVAL(   No_of_Employees__c  , &quot;&quot; ),0,5.5)+

If(ISBLANK(  Registration__c  ),0,5.5)+

If(ISBLANK(  Product_Interest__c ),0,5.5)+

If(ISBLANK(  Street_1__c  ),0,5.5)+

If(ISBLANK(  Street_2__c  ),0,5.5)+

If(ISPICKVAL(  Parish_Region_Department__c , &quot;&quot; ),0,5.5)+

If(ISPICKVAL(  Country__c , &quot;&quot; ),0,5.5)+

If(ISBLANK(  Latitude  ),0,5.5)+

If(ISBLANK(  Longitude  ),0,5.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>