DigicielFull/force-app/main/default/objects/Lead/fields/List_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>List_Current_Provider__c</fullName>
    <inlineHelpText>Who are they buying from?</inlineHelpText>
    <label>List Current Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digicel</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Drop Box</fullName>
            </value>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Illuminat</fullName>
            </value>
            <value>
                <fullName>Island Networks</fullName>
            </value>
            <value>
                <fullName>LIME</fullName>
            </value>
            <value>
                <fullName>Rack Space</fullName>
            </value>
            <value>
                <fullName>Synchon</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>El Dorado Communications Inc.</fullName>
            </value>
            <value>
                <fullName>E-Networks</fullName>
            </value>
            <value>
                <fullName>MDT Technologies</fullName>
            </value>
            <value>
                <fullName>Guyana Net</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>Telesur</fullName>
            </value>
            <value>
                <fullName>Uniqa</fullName>
            </value>
            <value>
                <fullName>Parbonet</fullName>
            </value>
            <value>
                <fullName>B Mobile</fullName>
            </value>
            <value>
                <fullName>LISA communications</fullName>
            </value>
            <value>
                <fullName>TSTT</fullName>
            </value>
            <value>
                <fullName>Natcom</fullName>
            </value>
            <value>
                <fullName>Hainet</fullName>
            </value>
            <value>
                <fullName>Access Haiti</fullName>
            </value>
            <value>
                <fullName>Multilink</fullName>
            </value>
            <value>
                <fullName>Atalou</fullName>
            </value>
            <value>
                <fullName>Data Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>