DigicielFull/force-app/main/default/objects/Lead/fields/List_Current_Subscribed_Packages_del__c.field-meta.xml
<CustomField>
    <fullName>List_Current_Subscribed_Packages_del__c</fullName>
    <inlineHelpText>What Packages does the customer subscribe to?</inlineHelpText>
    <label>List Current Subscribed Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic TV</fullName>
            </value>
            <value>
                <fullName>Extended TV</fullName>
            </value>
            <value>
                <fullName>Platinum TV</fullName>
            </value>
            <value>
                <fullName>1 MB</fullName>
            </value>
            <value>
                <fullName>2 MB</fullName>
            </value>
            <value>
                <fullName>4 MB</fullName>
            </value>
            <value>
                <fullName>8 MB</fullName>
            </value>
            <value>
                <fullName>16 MB</fullName>
            </value>
            <value>
                <fullName>Maverick 3mbs</fullName>
            </value>
            <value>
                <fullName>Power- 8mbs</fullName>
            </value>
            <value>
                <fullName>Extra- 16mbs</fullName>
            </value>
            <value>
                <fullName>Max 32mbs</fullName>
            </value>
            <value>
                <fullName>Pro- 50mbs</fullName>
            </value>
            <value>
                <fullName>Basic Cable</fullName>
            </value>
            <value>
                <fullName>Loyalty Package</fullName>
            </value>
            <value>
                <fullName>Tier Service</fullName>
            </value>
            <value>
                <fullName>Premimum Movie Channels</fullName>
            </value>
            <value>
                <fullName>SportsMax 1</fullName>
            </value>
            <value>
                <fullName>SportsMax 2</fullName>
            </value>
            <value>
                <fullName>SportsMax 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Express Plus</fullName>
            </value>
            <value>
                <fullName>Extreme Plus</fullName>
            </value>
            <value>
                <fullName>Turbo</fullName>
            </value>
            <value>
                <fullName>Turbo Plus</fullName>
            </value>
            <value>
                <fullName>Fixed Line</fullName>
            </value>
            <value>
                <fullName>Bulk Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>