DigicielFull/force-app/main/default/objects/Lead/fields/List_Your_Current_Providers__c.field-meta.xml
<CustomField>
    <fullName>List_Your_Current_Providers__c</fullName>
    <inlineHelpText>If answer was No to being a current customer, who is their Current Providers?</inlineHelpText>
    <label>List Your Current Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Islandcom</fullName>
            </value>
            <value>
                <fullName>PTV</fullName>
            </value>
            <value>
                <fullName>Direct TV</fullName>
            </value>
            <value>
                <fullName>Dish Network</fullName>
            </value>
            <value>
                <fullName>Digicel 4G</fullName>
            </value>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>BLINK</fullName>
            </value>
            <value>
                <fullName>GREEN DOT</fullName>
            </value>
            <value>
                <fullName>D/VALE CABLE COMPANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>