DigicielFull/force-app/main/default/objects/Lead/fields/Loop_Country__c.field-meta.xml
<CustomField>
    <fullName>Loop_Country__c</fullName>
    <label>Trend Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>British Virgin Islands</fullName>
            </value>
            <value>
                <fullName>Cayman</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>French Guiana</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Guadeloupe</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Martinique</fullName>
            </value>
            <value>
                <fullName>Montserrat</fullName>
            </value>
            <value>
                <fullName>Panamá</fullName>
            </value>
            <value>
                <fullName>St. Kitts</fullName>
            </value>
            <value>
                <fullName>St. Lucia</fullName>
            </value>
            <value>
                <fullName>St. Vincent</fullName>
            </value>
            <value>
                <fullName>Suriname</fullName>
            </value>
            <value>
                <fullName>Trinidad &amp; Tobago</fullName>
            </value>
            <value>
                <fullName>Turks &amp; Caicos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>