DigicielFull/force-app/main/default/objects/Lead/fields/Main_Challenge_in_Daily_Operations__c.field-meta.xml
<CustomField>
    <fullName>Main_Challenge_in_Daily_Operations__c</fullName>
    <label>Main Challenge in Daily Operations</label>
    <type>TextArea</type>
</CustomField>