DigicielFull/force-app/main/default/objects/Lead/fields/Main_Digital_TV_Packages__c.field-meta.xml
<CustomField>
    <fullName>Main_Digital_TV_Packages__c</fullName>
    <label>Main Digital TV Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Basic Cable</fullName>
            </value>
            <value>
                <fullName>BTV - Basic TV</fullName>
            </value>
            <value>
                <fullName>Bulk Service</fullName>
            </value>
            <value>
                <fullName>Entertainment package</fullName>
            </value>
            <value>
                <fullName>Expanded Digital</fullName>
            </value>
            <value>
                <fullName>Family and Entertainment pkg (bundle)</fullName>
            </value>
            <value>
                <fullName>Family package</fullName>
            </value>
            <value>
                <fullName>Loyalty Package</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Tier Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>