DigicielFull/force-app/main/default/objects/Lead/fields/MapIt_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>MapIt_Business_Type__c</fullName>
    <label>MapIt Business Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>