DigicielFull/force-app/main/default/objects/Lead/fields/MapIt_Date_Collected__c.field-meta.xml
<CustomField>
    <fullName>MapIt_Date_Collected__c</fullName>
    <label>MapIt Date Collected</label>
    <type>Date</type>
</CustomField>