DigicielFull/force-app/main/default/objects/Lead/fields/MapIt_Duration__c.field-meta.xml
<CustomField>
    <fullName>MapIt_Duration__c</fullName>
    <label>MapIt Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>