DigicielFull/force-app/main/default/objects/Lead/fields/MapIT_Suburb_1__c.field-meta.xml
<CustomField>
    <fullName>MapIT_Suburb_1__c</fullName>
    <label>MapIT Suburb 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>