DigicielFull/force-app/main/default/objects/Lead/fields/Marketing_Pain__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Pain__c</fullName>
    <label>Marketing Pain Point &amp; Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>