DigicielFull/force-app/main/default/objects/Lead/fields/Marketing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Requirements__c</fullName>
    <label>Marketing Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>