DigicielFull/force-app/main/default/objects/Lead/fields/Minimum_Target_Solution__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Target_Solution__c</fullName>
    <label>Minimum Target Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTTB 60</fullName>
            </value>
            <value>
                <fullName>FTTB 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>