DigicielFull/force-app/main/default/objects/Lead/fields/Number_of_Set_Top_Converter_Box__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Set_Top_Converter_Box__c</fullName>
    <label>Number of Set-Top Converter Box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>