DigicielFull/force-app/main/default/objects/Lead/fields/Number_of_Standard_Box_Rental__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Standard_Box_Rental__c</fullName>
    <label>Number of Standard Box Rental</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>