DigicielFull/force-app/main/default/objects/Lead/fields/Parish_mappingContact__c.field-meta.xml
<CustomField>
    <fullName>Parish_mappingContact__c</fullName>
    <description>DO NOT PLACE IT IN THE LAYOUT!!!
THIS IS ONLY TO SEND THE VALUE TO THE CONTACT RECORD WHEN LEAD CONVERSION.</description>
    <formula>TEXT( Parish_Region_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parish mappingContact</label>
    <type>Text</type>
</CustomField>