DigicielFull/force-app/main/default/objects/Lead/fields/Physical_Adress__c.field-meta.xml
<CustomField>
    <fullName>Physical_Adress__c</fullName>
    <label>Physical Adress</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>