DigicielFull/force-app/main/default/objects/Lead/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <label>Price Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>