DigicielFull/force-app/main/default/objects/Lead/fields/Primary_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_ID_Type__c</fullName>
    <label>Primary ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Drivers Licenses</fullName>
            </value>
            <value>
                <fullName>National ID</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>