DigicielFull/force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>Advanced Networking</fullName>
            </value>
            <value>
                <fullName>Alarm.com</fullName>
            </value>
            <value>
                <fullName>Amda</fullName>
            </value>
            <value>
                <fullName>Audio Conferencing</fullName>
            </value>
            <value>
                <fullName>Avaya Unified Communication</fullName>
            </value>
            <value>
                <fullName>BIA ( Basic Internet Access)</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Broadband internet</fullName>
            </value>
            <value>
                <fullName>Bulk SMS</fullName>
            </value>
            <value>
                <fullName>Business Broadband</fullName>
            </value>
            <value>
                <fullName>Business in a Box</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Cisco Unified Communication</fullName>
            </value>
            <value>
                <fullName>Cloud Back-Up</fullName>
            </value>
            <value>
                <fullName>Cloud BackUp – Credit Card</fullName>
            </value>
            <value>
                <fullName>Cloud Backup SB</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Cloud - DaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - DRaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - Hosted Email</fullName>
            </value>
            <value>
                <fullName>Cloud - IaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - LoB hosting</fullName>
            </value>
            <value>
                <fullName>Cloud - MDM</fullName>
            </value>
            <value>
                <fullName>Cloud - NFV</fullName>
            </value>
            <value>
                <fullName>Cloud - PaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - Private Cloud</fullName>
            </value>
            <value>
                <fullName>Cloud - Security</fullName>
            </value>
            <value>
                <fullName>Cloud Services</fullName>
            </value>
            <value>
                <fullName>Cloud - Storage &amp; Backup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>