DigicielFull/force-app/main/default/objects/Lead/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digicel More</fullName>
            </value>
            <value>
                <fullName>Digicel Sports Max</fullName>
            </value>
            <value>
                <fullName>Loop News</fullName>
            </value>
            <value>
                <fullName>Loop Trade</fullName>
            </value>
            <value>
                <fullName>Newcomm</fullName>
            </value>
            <value>
                <fullName>Shazam</fullName>
            </value>
            <value>
                <fullName>Silverstone</fullName>
            </value>
            <value>
                <fullName>Trend Media</fullName>
            </value>
            <value>
                <fullName>Wrap</fullName>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
            <value>
                <fullName>www.facebook.com</fullName>
            </value>
            <value>
                <fullName>www.google.com</fullName>
            </value>
            <value>
                <fullName>www.looppng.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>