DigicielFull/force-app/main/default/objects/Lead/fields/Reason_For_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Opt_Out__c</fullName>
    <description>created or Microsoft launch</description>
    <label>Reason For Opt Out</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>