DigicielFull/force-app/main/default/objects/Lead/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>