DigicielFull/force-app/main/default/objects/Lead/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <label>Sale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Presale</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>