DigicielFull/force-app/main/default/objects/Lead/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaliyah Anthony</fullName>
            </value>
            <value>
                <fullName>Akia Charles</fullName>
            </value>
            <value>
                <fullName>Akielya Placide</fullName>
            </value>
            <value>
                <fullName>Alexia James</fullName>
            </value>
            <value>
                <fullName>Allenna Antoine</fullName>
            </value>
            <value>
                <fullName>Allick Lazare</fullName>
            </value>
            <value>
                <fullName>Allisha  Carbon</fullName>
            </value>
            <value>
                <fullName>Allison Jute</fullName>
            </value>
            <value>
                <fullName>Alston Drakes</fullName>
            </value>
            <value>
                <fullName>Amanda  Tavernier</fullName>
            </value>
            <value>
                <fullName>Amber Jade Durand</fullName>
            </value>
            <value>
                <fullName>Angelika Shillinfgord</fullName>
            </value>
            <value>
                <fullName>Anika Augustine</fullName>
            </value>
            <value>
                <fullName>Anita Felix</fullName>
            </value>
            <value>
                <fullName>Antonio Castillo</fullName>
            </value>
            <value>
                <fullName>Arelle Julien</fullName>
            </value>
            <value>
                <fullName>Arlinghton Stewart</fullName>
            </value>
            <value>
                <fullName>Bianca Youth</fullName>
            </value>
            <value>
                <fullName>Blowndyng Torchon</fullName>
            </value>
            <value>
                <fullName>Carllian James</fullName>
            </value>
            <value>
                <fullName>Celina St.Rose</fullName>
            </value>
            <value>
                <fullName>Christine Mannette-Campbell</fullName>
            </value>
            <value>
                <fullName>Christophagna Jean</fullName>
            </value>
            <value>
                <fullName>Clarence  Bertrand</fullName>
            </value>
            <value>
                <fullName>Cristie Alexander</fullName>
            </value>
            <value>
                <fullName>Curwin Breedy</fullName>
            </value>
            <value>
                <fullName>Deanella Daley</fullName>
            </value>
            <value>
                <fullName>Denice anselm</fullName>
            </value>
            <value>
                <fullName>Djeniflor Narcisse</fullName>
            </value>
            <value>
                <fullName>Dwayne Dookie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>