DigicielFull/force-app/main/default/objects/Lead/fields/Schedule_Installation_Connection_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Installation_Connection_Date__c</fullName>
    <label>Schedule Installation/Connection Date</label>
    <type>Date</type>
</CustomField>