DigicielFull/force-app/main/default/objects/Lead/fields/Secondary_Community_Contact_Position__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Community_Contact_Position__c</fullName>
    <label>Secondary Community Contact Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>